# cfa-ring-vax-widget

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manifest.json  pyproject.toml  requirements.txt
docs/: approach.md
ringvax/: __init__.py  app.py  manifest.json  plot.py  requirements.txt  summary.py
tests/: test_app.py  test_simulate.py  test_summary.py
tests/data/: snapshot.json
