[tool.poetry]
name = "ringvax"
version = "0.1.1"
description = ""
authors = ["Scott Olesen <ulp7@cdc.gov>", "Andy Magee <rzg0@cdc.gov>", "Paige Miller <yub1@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.0"
streamlit = "^1.41.0"
polars = "^1.17.1"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
